--- a/_includes/advisory-group.html
+++ b/_includes/advisory-group.html
@@ -19,7 +19,7 @@
     <div class='small-6 medium-3 large-3 columns'>
         <div class='mod modTeamMember style-2'>
           <div class='member'>
-            <img class="avatar" alt="" src="{{site.baseurl}}/{{person.avatar}}" />
+            <img class="avatar" alt="" src="{{site.url}}{{site.baseurl}}{{site.data.images.directory}}/{{person.avatar}}" />
           </div>
           <h3>{{name}}</h3>{% if person.position %}
           <p class='position'>{{person.position}}{% if person.department %}
